src/test/ui/parser/match-arrows-block-then-binop.stderr
error: expected pattern, found `+`
  --> $DIR/match-arrows-block-then-binop.rs:5:9
   |
LL |       } + 5
   |         ^ expected pattern

error: aborting due to previous error

