src/test/ui/parser/match-arrows-block-then-binop.rs
fn main() {

    match 0 {
      0 => {
      } + 5 //~ ERROR expected pattern, found `+`
    }
}
